Add social links, larger logo, background watermark

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body class="dark-mode">
+    <!-- Background Watermark -->
+    <img src="assets/brain-logo.png" class="bg-watermark" alt="">
+    
     <!-- Status Bar -->
     <div class="status-bar">
         <div class="status-left">
@@ -99,6 +102,19 @@
                 <button class="action-btn" onclick="dashboard.setStatus('blocked')">
                     <span class="dot red"></span> Set Blocked
                 </button>
+            </div>
+            
+            <!-- Social Links -->
+            <div class="social-links">
+                <h3>Connect</h3>
+                <a href="https://x.com/JAqulos67857" target="_blank" class="social-link">
+                    <span class="social-icon">𝕏</span>
+                    <span>@JAqulos67857</span>
+                </a>
+                <a href="https://moltbook.com/u/JarvisAqulos" target="_blank" class="social-link">
+                    <span class="social-icon">🤖</span>
+                    <span>JarvisAqulos</span>
+                </a>
             </div>
         </aside>
 
