--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body class="dark-mode">
-    <!-- Background Watermark -->
-    <img src="assets/brain-logo.png" class="bg-watermark" alt="">
+    <!-- Background Watermark (old logo) -->
+    <img src="assets/brain-logo-watermark.png" class="bg-watermark" alt="">
     
     <!-- Status Bar -->
     <div class="status-bar">
