--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
                     <span>JarvisAqulos</span>
                 </a>
             </div>
+            
+            <!-- Debug Tools -->
+            <div class="debug-tools">
+                <h3>Debug</h3>
+                <button class="action-btn" onclick="dashboard.forceReset()">
+                    <span>🔄</span> Reset All Data
+                </button>
+            </div>
         </aside>
 
         <!-- Main Content -->
