Add pie chart and visual P/L indicators to PSE Portfolio

--- a/index.html
+++ b/index.html
@@ -736,6 +736,9 @@
                             <h2>📊 Allocation</h2>
                         </div>
                         <div class="panel-content">
+                            <div id="pseAllocationChart" class="allocation-chart-container">
+                                <canvas id="psePieChart" width="180" height="180"></canvas>
+                            </div>
                             <div id="pseAllocation" class="allocation-list">
                                 <div class="empty-state">Loading allocation...</div>
                             </div>
