Add PSE Portfolio as Project, add easy Reset button in top bar

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             </div>
         </div>
         <div class="status-right">
+            <button class="reset-btn" onclick="dashboard.confirmReset()" title="Reset all data">
+                🔄 Reset
+            </button>
             <div class="timestamp" id="timestamp">--:--:--</div>
             <div class="version">v2.0.0</div>
         </div>
