--- a/index.html
+++ b/index.html
@@ -954,6 +954,14 @@
         </div>
     </div>
 
+    <script>
+        // Global error handler
+        window.onerror = function(msg, url, line, col, error) {
+            console.error('Dashboard Error:', msg, 'at line', line);
+            document.body.innerHTML += '<div style="position:fixed;top:0;left:0;right:0;background:#f44336;color:white;padding:20px;z-index:9999;font-family:sans-serif;"><strong>Dashboard Error:</strong> ' + msg + ' (Line ' + line + ')<br>Check browser console (F12) for details.<br><button onclick="location.reload()" style="margin-top:10px;padding:8px 16px;">Reload</button></div>';
+            return false;
+        };
+    </script>
     <script src="js/dashboard.js"></script>
 </body>
 </html>
