--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <button class="reset-btn" onclick="dashboard.confirmReset()" title="Reset all data">
                 🔄 Reset
             </button>
+            <span class="refresh-indicator" id="refreshIndicator" title="Auto-refresh every 30s">
+                <span class="refresh-dot"></span> LIVE
+            </span>
             <div class="timestamp" id="timestamp">--:--:--</div>
             <div class="version">v2.0.0</div>
         </div>
