Add AI Credits tracking section with budget, providers, and usage monitoring

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
                     <span>Moltbook</span>
                     <span class="badge" id="moltbookBadge" style="display: none;">0</span>
                 </button>
+                <button class="nav-item" data-section="ai-credits">
+                    <span class="nav-icon">💎</span>
+                    <span>AI Credits</span>
+                    <span class="badge" id="aiCreditsBadge" style="display: none;">$</span>
+                </button>
             </nav>
 
             <!-- Quick Actions -->
@@ -896,6 +901,99 @@
                                 <span class="log-icon">🤖</span>
                                 <span class="log-text">Moltbook module initialized</span>
                                 <span class="log-tag">moltbook</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- AI Credits Section -->
+            <section id="ai-credits" class="section">
+                <div class="section-header">
+                    <h1>💎 AI Model Credits</h1>
+                    <p class="subtitle">Track API usage and remaining balances</p>
+                </div>
+
+                <!-- Budget Overview -->
+                <div class="panel status-panel">
+                    <div class="panel-header">
+                        <h2>📊 Monthly Budget</h2>
+                        <span class="live-indicator">LIVE</span>
+                    </div>
+                    <div class="panel-content">
+                        <div class="status-grid">
+                            <div class="status-card">
+                                <div class="status-label">Monthly Budget</div>
+                                <div class="status-value" id="aiBudget">$200</div>
+                                <div class="status-sublabel">Set limit</div>
+                            </div>
+                            <div class="status-card">
+                                <div class="status-label">Spent This Month</div>
+                                <div class="status-value" id="aiSpent">$0</div>
+                                <div class="status-sublabel" id="aiSpentPct">0% used</div>
+                            </div>
+                            <div class="status-card">
+                                <div class="status-label">Remaining</div>
+                                <div class="status-value" id="aiRemaining">$200</div>
+                                <div class="status-sublabel">Available</div>
+                            </div>
+                            <div class="status-card">
+                                <div class="status-label">Alert Threshold</div>
+                                <div class="status-value" id="aiThreshold">$150</div>
+                                <div class="status-sublabel">Warning at 75%</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Provider Status -->
+                <div class="panel">
+                    <div class="panel-header">
+                        <h2>🔌 Provider Status</h2>
+                        <button class="btn-small" onclick="dashboard.refreshAICredits()">🔄 Refresh</button>
+                    </div>
+                    <div class="panel-content">
+                        <div id="aiProvidersList" class="provider-list">
+                            <div class="provider-card">
+                                <div class="provider-header">
+                                    <span class="provider-name">Moonshot (Kimi)</span>
+                                    <span class="provider-status active">● Active</span>
+                                </div>
+                                <div class="provider-details">
+                                    <div class="detail-row">
+                                        <span class="detail-label">Model:</span>
+                                        <span class="detail-value">kimi-k2.5</span>
+                                    </div>
+                                    <div class="detail-row">
+                                        <span class="detail-label">Balance:</span>
+                                        <span class="detail-value">Pay-as-you-go</span>
+                                    </div>
+                                    <div class="detail-row">
+                                        <span class="detail-label">Today's Usage:</span>
+                                        <span class="detail-value">Unknown</span>
+                                    </div>
+                                    <div class="detail-row">
+                                        <span class="detail-label">Last Checked:</span>
+                                        <span class="detail-value">Just now</span>
+                                    </div>
+                                </div>
+                                <div class="provider-notes">Pay-as-you-go via API key</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Usage History -->
+                <div class="panel">
+                    <div class="panel-header">
+                        <h2>📈 Usage Trends</h2>
+                    </div>
+                    <div class="panel-content">
+                        <div class="usage-chart-placeholder">
+                            <div class="chart-message">
+                                <span class="chart-icon">📊</span>
+                                <p>Usage tracking visualization coming soon</p>
+                                <span class="chart-subtext">Data collection in progress</span>
                             </div>
                         </div>
                     </div>
