--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
                     <span>AI Credits</span>
                     <span class="badge" id="aiCreditsBadge" style="display: none;">$</span>
                 </button>
+                <a href="/voice" class="nav-item" style="text-decoration: none; display: flex; align-items: center; gap: 12px;">
+                    <span class="nav-icon">🎙️</span>
+                    <span>Voice Chat</span>
+                    <span class="badge" style="background: var(--accent-green); color: var(--bg-primary); font-size: 10px; padding: 2px 6px; border-radius: 10px;">NEW</span>
+                </a>
             </nav>
 
             <!-- Quick Actions -->
