Add chat API endpoint and update voice chat link to HTTPS

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                     <span>AI Credits</span>
                     <span class="badge" id="aiCreditsBadge" style="display: none;">$</span>
                 </button>
-                <a href="/voice" class="nav-item" style="text-decoration: none; display: flex; align-items: center; gap: 12px;">
+                <a href="https://localhost:3443/voice" target="_blank" class="nav-item" style="text-decoration: none; display: flex; align-items: center; gap: 12px;" title="Opens voice chat with SSL (microphone enabled)">
                     <span class="nav-icon">🎙️</span>
                     <span>Voice Chat</span>
-                    <span class="badge" style="background: var(--accent-green); color: var(--bg-primary); font-size: 10px; padding: 2px 6px; border-radius: 10px;">NEW</span>
+                    <span class="badge" style="background: var(--accent-green); color: var(--bg-primary); font-size: 10px; padding: 2px 6px; border-radius: 10px;">SSL</span>
                 </a>
             </nav>
 
